[package]
name = "serve-actix-diesel-auth-scaffold"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4"
diesel = { version = "2.2.4", features = ["postgres"] }
dotenvy = "^0.15"
env_logger = "^0.11"
#rust-actix-diesel-auth-scaffold = { git = "https://github.com/offscale/rust-actix-diesel-auth-scaffold", version = "0.0.1" }
rust-actix-diesel-auth-scaffold = { path = "../rust-actix-diesel-auth-scaffold" }
clap = { version = "4.5.20", features = ["derive"] }
indexmap = "2.6.0"
