[package]
name = "serve-actix-diesel-auth-scaffold"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0 OR MIT OR CC0"

[dependencies]
actix-web = "^4"
actix-web-httpauth = "^0.8"
clap = { version = "^4.5", features = ["derive", "env"] }
diesel = { version = "^2.2", features = ["postgres"] }
dotenvy = "^0.15"
env_logger = "^0.11"
indexmap = "^2.10"
#rust-actix-diesel-auth-scaffold = { path = "../rust-actix-diesel-auth-scaffold" }
rust-actix-diesel-auth-scaffold = { git = "https://github.com/offscale/rust-actix-diesel-auth-scaffold" }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["indexmap"] }
utoipa = { version = "^5.4", features = ["actix_extras"] }
utoipa-actix-web = "^0.1"
utoipa-rapidoc = { version = "^5", features = ["actix-web"] }
utoipa-redoc = { version = "^5", features = ["actix-web"] }
utoipa-scalar = { version = "^0.2", features = ["actix-web"] }
utoipa-swagger-ui = { version = "^8", features = ["actix-web"] }
